<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:background="@color/colorLightBackground"
    tools:context=".ui.activities.AddSpaceActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_addSpace">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addspace_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36dp"
                    android:layout_marginBottom="12dp"
                    android:textAlignment="center"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload image"
                    android:id="@+id/btn_upload_image"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_below="@id/btn_upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    />

                <LinearLayout
                    android:id="@+id/addressSearchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="Add address"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/colorSubFont"/>
                    <Button
                        android:id="@+id/btn_add_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Add address"
                        android:textColor="@color/colorMainFont"
                        android:background="@color/colorAccent"/>
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_descrip"
                    android:layout_marginTop="8dp"
                    android:hint="Add description"
                    android:textColorHint="@color/colorSubFont"
                    android:textColor="@color/colorSubFont"/>

                <Spinner
                    android:id="@+id/cartypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:popupBackground="@color/colorAccent"
                    android:spinnerMode="dropdown"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_margin="4dp"
                    android:entries="@array/search_cartype_spinner"/>

                <Spinner
                    android:id="@+id/cancelPolicySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:popupBackground="@color/colorAccent"
                    android:spinnerMode="dropdown"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_margin="4dp"
                    android:entries="@array/cancel_policy_spinner"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    android:id="@+id/btn_confirm"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"
                    />



            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>