<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorDarkBackground"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_login"
            android:paddingTop="56dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainFont"
            android:textSize="35dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:hint="Email"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:hint="Password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="login"
            android:id="@+id/loginButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:padding="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/login_signuplink"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorMainFont"
            android:id="@+id/signupLink" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/login_forgotpwlink"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorMainFont"
            android:id="@+id/forgotPwLink" />
    </LinearLayout>
</ScrollView>
