...
                        android:background="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="[address]"
                        android:id="@+id/spacedetail_address"
                        android:layout_alignBottom="@+id/licensePlate_label"
                        android:layout_toRightOf="@+id/licensePlate_label"
                        android:layout_toEndOf="@+id/licensePlate_label"
                        android:layout_weight="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorMainFont"
                        android:background="@color/colorAccent"/>
                </LinearLayout>

                <com.imanoweb.calendarview.CustomCalendarView
                    android:id="@+id/calendar_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightBackground"
                    app:calendarBackgroundColor="@color/colorLightBackground"
                    app:calendarTitleTextColor="@color/colorSubFont"
                    app:currentDayOfMonthColor="@color/colorAccent"
...
                    app:weekLayoutBackgroundColor="@color/colorLightBackground"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMainFont"
                    android:id="@+id/btn_add_time"
                    android:clickable="false"
                    android:text="add time"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
